# sensa

./: .gitignore  LICENSE  README.md  pyproject.toml  test_sports.py
blog/: launch_post.md
examples/: README.md  basic_usage.py  custom_channel.py  hermes_integration.py  langchain_middleware.py  trading_agent.py
sensa/: __init__.py  client.py  compression.py  config.py  staleness.py
sensa/channels/: __init__.py  base.py  crypto.py  news.py  sports.py  time_channel.py  weather.py
