[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensa-ai"
version = "0.2.0"
description = "Real-time environmental context for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sensa Contributors"},
]
keywords = ["ai", "agents", "context", "environment", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.8.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
]

[project.urls]
Homepage = "https://github.com/terrapin88/sensa"
Repository = "https://github.com/terrapin88/sensa"
Issues = "https://github.com/terrapin88/sensa/issues"

[tool.hatch.build.targets.wheel]
packages = ["sensa"]
